# wayfire-aicxx

./: CMakeLists.txt  README.md  debug.h  debug_ostream_operators.h  meson.build  sys.h
